--- a/package.json
+++ b/package.json
@@ -7,11 +7,25 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.6",
+    "browserify": "^13.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "flux": "^2.1.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^3.2.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-open": "^1.0.0",
     "jade": "~1.11.0",
+    "jquery": "^2.2.2",
+    "lodash": "^4.6.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "react": "^0.14.7",
+    "react-router": "^2.0.1",
+    "reactify": "^1.1.1",
+    "serve-favicon": "~2.3.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
