--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "morgan": "~1.6.1",
     "react": "^0.14.7",
     "react-router": "^2.0.1",
+    "react-toastr": "^2.4.0",
     "reactify": "^1.1.1",
     "serve-favicon": "~2.3.0",
+    "toaster": "^0.1.2",
+    "toastr": "^2.1.2",
     "vinyl-source-stream": "^1.1.0"
   }
 }
