--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserify": "^13.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "events": "^1.1.0",
     "express": "~4.13.1",
     "flux": "^2.1.1",
     "gulp": "^3.9.1",
@@ -20,8 +21,10 @@
     "gulp-open": "^1.0.0",
     "jade": "~1.11.0",
     "jquery": "^2.2.2",
+    "keymirror": "^0.1.1",
     "lodash": "^4.6.1",
     "morgan": "~1.6.1",
+    "object-assign": "^4.0.1",
     "react": "^0.14.7",
     "react-router": "^2.0.1",
     "react-toastr": "^2.4.0",
